<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <group >
        <item
            android:id="@+id/Rooms"
            android:title="@string/rooms" />
        <item
            android:id="@+id/Tasks"
            android:title="@string/tasks" />
        <item
            android:id="@+id/ShopList"
            android:title="@string/shop_list" />
        <item
            android:id="@+id/Components"
            android:title="@string/components" />
        <item
            android:id="@+id/Profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/About"
            android:title="@string/about" />
    </group>
</menu>